# DZ_WEB_12

./: .env  .env.example  .gitignore  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 17a58d1edd2d_inst.py  2d611bfee756_inin.py  a0f83257bea3_add_verefy_for_user.py  f801c2fafdf5_add_avatar.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contact_def.py  users.py
src/routes/: auth.py  avatar.py  contact_routes.py  limiter.py
src/schemas/: contact_schema.py  user.py
src/services/: auth.py  email.py  roles.py
tests/: test.db  test_e2e_auth.py  test_unit_repository_users.py
